Input field layout bugfix

--- a/source/_assets/css/form.pcss
+++ b/source/_assets/css/form.pcss
@@ -69,7 +69,7 @@
             items-center
             justify-start
             px-3
-            py-2
+            /*py-2*/
             leading-6
 
             /*
@@ -89,6 +89,9 @@
             focus:ring-blue-500
             focus:ring-opacity-25
         ;
+
+        padding-top: calc(0.5rem - 1px);
+        padding-bottom: calc(0.5rem - 1px);
     }
 
     .input[readonly] {
